; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_verify_dir_item.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_verify_dir_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_dir_item = type { i64, i32 }

@BTRFS_NAME_MAX = common dso_local global i32 0, align 4
@BTRFS_FT_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"Invalid dir item type: %i\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@BTRFS_FT_XATTR = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [31 x i8] c"Invalid dir item name len: %u\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_dir_item*, i64, i64)* @verify_dir_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_dir_item(%struct.btrfs_dir_item* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.btrfs_dir_item*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.btrfs_dir_item* %0, %struct.btrfs_dir_item** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i32, i32* @BTRFS_NAME_MAX, align 4
  store i32 %10, i32* %8, align 4
  %11 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %12 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @BTRFS_FT_MAX, align 8
  %15 = icmp sge i64 %13, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %18 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @ERR(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %4, align 4
  br label %55

23:                                               ; preds = %3
  %24 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %25 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @BTRFS_FT_XATTR, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 255, i32* %8, align 4
  br label %30

30:                                               ; preds = %29, %23
  %31 = load i64, i64* %6, align 8
  %32 = add i64 %31, 16
  %33 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %34 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = sext i32 %35 to i64
  %37 = add i64 %32, %36
  store i64 %37, i64* %9, align 8
  %38 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %39 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = load i32, i32* %8, align 4
  %42 = icmp sgt i32 %40, %41
  br i1 %42, label %47, label %43

43:                                               ; preds = %30
  %44 = load i64, i64* %9, align 8
  %45 = load i64, i64* %7, align 8
  %46 = icmp sgt i64 %44, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %43, %30
  %48 = load %struct.btrfs_dir_item*, %struct.btrfs_dir_item** %5, align 8
  %49 = getelementptr inbounds %struct.btrfs_dir_item, %struct.btrfs_dir_item* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 8
  %51 = call i32 @ERR(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %50)
  %52 = load i32, i32* @TRUE, align 4
  store i32 %52, i32* %4, align 4
  br label %55

53:                                               ; preds = %43
  %54 = load i32, i32* @FALSE, align 4
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %53, %47, %16
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
